progress on editing the text

--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -83,18 +83,28 @@ vegetation composition, but we also need to propose mechanisms to
 explain these traits patterns. Several approach have been proposed to
 understand these mechanisms. First, there is along history of studies
 proposing adaptative arguments based on an optimization approach with
-ecophysiological models of plant functioning \citep{Makela-2002}. For
-instance, \citet{Wright-2003} proposed that to maximize
-photosynthesis, $N_{area}$ should increase with aridity. These
-approaches represent a key first step (we will discuss the main
-arguments and models proposed for $LMA$ and $N_{area}$ below), but
-they provide no explanation to the large trait variation within site
-resulting from the coexistence of interacting species with different
-trait values. They fail to account for the fact that these traits are
-also involved in species coexistence. A much more abstract approach
-have used theoretical models to explore how species local climate
-adaptation and competitive interactions drive species evolution and
-changes in traits composition along theoretical gradients
+ecophysiological models of plant functioning \citep{Makela-2002}.
+
+For instance, high $LMA$ has been proposed as an advantage in dry climate because
+stiffer leaves can have a higher resistance to dehydration
+\citep{Wright-2002a,Wright-2002b} or the need to avoid overheating
+under condition of low transpiration \citep{Leigh-2012}. Higher
+$N_{area}$ in dry climate have also been proposed as strategy to
+maximise photosynthesis \citep{Wright-2003}. This
+based on the idea that plant are minimizing the summed cost of water
+loss and carbon gain
+\citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
+higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
+plant to achieve a high $A_{area}$ even at the low stomatal conductance
+$g_s$ encountred in dry climate.
+
+These approaches represent a key first step, but
+they provide no explanation to the large trait variation observed
+within each site. This is because they fail to account for the fact that
+these traits also controls species interaction and the coexistence of
+species with different traits values. A much more abstract approach
+have used theoretical models to explore how abiotic constrains and competitive interactions drive species evolution and
+changes in traits composition along theoretical abiotic gradients
 \citep{Case-2000,Doebeli-2003,Goldberg-2006,Leimar-2008}. These
 studies have shown that competition can affect the range of traits
 value found in a given community and make the traits deviate from the
@@ -102,12 +112,13 @@ theoretical climatic optimum.  Generally, one single traits determines
 both the local adaption to the abiotic conditions -- through the
 distance to an optimal trait value varying along the gradients -- and
 the competitive interaction -- through a normal competition kernel
-based on trait value of the species and its competitors \citep[see][]{Case-2000}. The problem is that as these studies are based on abstract traits, they are thus of limited use to explain observed patterns in traits variation in the field.
+based on trait value of the species and its competitors
+\citep[see][]{Case-2000}. But because these studies are based on abstract traits, they are of limited use to explain observed patterns in traits variation in the field.
 
 Recently a few studies have started to connect physiological approach
 and the theoretical approach to build trait-based models of full
 communities dynamics either at local \citep{Farrior-2013} or global
-scale \citep[see][]{Sakschewski-2015,Scheiter-2013}. They represent key elements of plant ecophysiological functioning. But they have been largely unsuccessful at explaining the wide range of traits fund in a single community as these models generally failed to capture the processes promoting species coexistence.
+scale \citep[see][]{Sakschewski-2015,Scheiter-2013}. They represent key elements of plant ecophysiological functioning. But they have been largely unsuccessful at explaining the wide range of traits found in a single community as these models generally failed to capture the processes promoting species coexistence.
 
 It is thus key to develop mechanistic models where traits are related
 to both the direct climate effect and to species coexistence. To do
@@ -117,54 +128,81 @@ traits and simultaneously allows for coexistence within sites and
 variation across sites. Coexistence is driven by competition for light
 in size-structured meta-populations and the outcomes of competition is
 moderated by environmental factors such as site productivity and
-disturbance regime. In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. In \plant\ the coordination between $LMA$ and $LSS$ discriminate different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favored in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favored in low light condition.
+disturbance regime. In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. The coordination between $LMA$ and $LSS$ discriminate different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favored in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favored in low light condition.
 
 \section{Key questions}
 
-We will explore how the predicted mixture of traits changes along aridity gradient exploring three different assumptions about how aridity
+We will explore how the mixture of $LMA$ and $N_{area}$ predicted by \plant\ changes along aridity gradient exploring three different assumptions about how aridity
 affect the dynamics and competition for light.
 
-First the aridity gradient can simply affect
+\begin{itemize}
+
+\item First focusing only on $LMA$, the aridity gradient can simply affect
 the productivity with consequence on the process of light
 competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}.
 
-
-Secondly, the environmental gradient can affect the
-trade-off underpinning the strategy of light use (so changing the
+\item Secondly, the environmental gradient can affect the
+trade-off underpinning the light use strategy (by changing the
 trade-off between LMA and LLS). For instance, it has been reported
 that the coordination between $LLS$ and $LMA$ is changing along
 aridity gradient both in regional \citep{Wright-2002b} and global
 studies \citep{Wright-2004}. The elevation of the relation between
-$LMA$ and $LLS$ decreases with aridity resulting in a lower leaf life span for a given $LMA$. Some studies have also reported potential effect on the slope of the relationship. This could be due to a higher investment in leaf nitrogen per area $N_{area}$ at higher aridity \citep{Wright-2002b}.
+$LMA$ and $LLS$ decreases with aridity resulting in a lower leaf life
+span for a given $LMA$. This could be due to a higher
+investment in leaf nitrogen per area $N_{area}$ at higher aridity
+\citep{Wright-2002b} that would results in a decrease leaf life span. Some studies have also reported potential
+effect on the slope of the relationship. We will thus explore how the
+change in the trade-off between $LMA$ and $LLS$ can influence shift in
+trait assembly predicted by \plant\.
 
-Thirdly, we could explore the role of $N_{area}$, which can have direct influence on the species tolerance to aridity as proposed by \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the abundance of photosynthetic apparatus in the leaf and allow the plant to achieve higher photosynthesis for a given stomatal conductance. We will do this both with an empirical photosynthesis model and with a coupled model of photosynthesis and stomatal conductance (see \citet{Prentice-2014,Wang-2017} for optimization approach using this type of models).
+\item Finally, we could explore the role of $N_{area}$, which can have
+  direct influence on the species tolerance to aridity as proposed by
+  \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the
+  abundance of photosynthetic apparatus in the leaf and allow the
+  plant to achieve higher photosynthesis for a given stomatal
+  conductance. Higher $N_{area}$ come however with the cost of a high
+  respiration rate. We will use \plant\ to predict assembly of these
+  two traits along an aridity gradient with two approaches. First
+  using an empirical photosynthesis model with a theoretical effect of
+  water stress and $N_{area}$ on productivity. Secondly, using the
+  widely used Farqhuar model connected to $N_{area}$ and a stomatal
+  conductance model responding along a vpd gradient. The first
+  approach is general but the relative effect of $N_{area}$ and
+  aridity are not predicted from first principle. The second approach
+  is based on well know mechanisms implemented in most DGVMs but
+  represent only a part of aridity effect through vpd.
+
+% and with a coupled model of photosynthesis and stomatal conductance (see \citet{Prentice-2014,Wang-2017} for optimization approach using this type of models).
+
+\end{itemize}
 
 
-\subsection{Review of optimal approach for $LMA$ and $N_{area}$ response to aridity}
 
-High $LMA$ has been proposed as an advantage in dry climate because
-stiffer leaves can have a higher resistance to dehydration
-\citep{Wright-2002a,Wright-2002b} or the need to avoid overheating
-under condition of low transpiration \citep{Leigh-2012}. (Other refs ?)
+% \subsection{Review of optimal approach for $LMA$ and $N_{area}$ response to aridity}
 
-Optimization literature of $N_{area}$ predict that $N_{area}$ should
-increase with aridity \citep{Wright-2003}. The general approach is
-based on the idea that plant are minimizing the summed cost of water
-loss and carbon gain
-\citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
-higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
-plant to achieve a high $A_{area}$ even at low stomatal conductance
-$g_s$. Recently \citet{Prentice-2014} and \citet{Dong-2017} provided
-quantitative predictions for the effect of key climatic variable
-(including VPD) based on an optimized Farquhar photosynthesis
-model. Several authors have challenged the idea of summing the cost of
-water and carbon gain on the ground that competition should favor
-carbon gain optimization only \citep{Wolf-2016} and the idea that the
-main effect of carbon stress come through cavitation \citep{Sperry-2016,Sperry-2017}.
+% High $LMA$ has been proposed as an advantage in dry climate because
+% stiffer leaves can have a higher resistance to dehydration
+% \citep{Wright-2002a,Wright-2002b} or the need to avoid overheating
+% under condition of low transpiration \citep{Leigh-2012}. (Other refs ?)
 
-A key point that have been raised by \citet{Dong-2017} is that
-$N_{area}$ could be divided in structural and rubisco related N (using
-the relationship of \citet{Onoda-2004}). {\color{red}TO DISCUSS WITH DANIEL SPLIT in $N_{STRUCT}$ VS $N_{RUBISCO}$ AND HAVE N STRUCT LINK TO LMA??}
+% Optimization literature of $N_{area}$ predict that $N_{area}$ should
+% increase with aridity \citep{Wright-2003}. The general approach is
+% based on the idea that plant are minimizing the summed cost of water
+% loss and carbon gain
+% \citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
+% higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
+% plant to achieve a high $A_{area}$ even at low stomatal conductance
+% $g_s$. Recently \citet{Prentice-2014} and \citet{Dong-2017} provided
+% quantitative predictions for the effect of key climatic variable
+% (including VPD) based on an optimized Farquhar photosynthesis
+% model. Several authors have challenged the idea of summing the cost of
+% water and carbon gain on the ground that competition should favor
+% carbon gain optimization only \citep{Wolf-2016} and the idea that the
+% main effect of carbon stress come through cavitation \citep{Sperry-2016,Sperry-2017}.
+
+% A key point that have been raised by \citet{Dong-2017} is that
+% $N_{area}$ could be divided in structural and rubisco related N (using
+% the relationship of \citet{Onoda-2004}). {\color{red}TO DISCUSS WITH DANIEL SPLIT in $N_{STRUCT}$ VS $N_{RUBISCO}$ AND HAVE N STRUCT LINK TO LMA??}
 
 
 \section{Overview of analysis and first results}
@@ -175,7 +213,11 @@ the relationship of \citet{Onoda-2004}). {\color{red}TO DISCUSS WITH DANIEL SPLI
 In a first set of assumption we consider a model where there is only one trait LMA. In the most simple version environmental gradients changes productivity (photosynthesis $A_{max}$ through a linear effect of a theoretical productivity gradient $p$) and
 thus competition for light and selection on LMA (this is already presented in \citet{Falster-2017}) (high LMA as adaptation to both log light and low productivity).
 
-The figure \ref{fig:lma} represents how the evolved community mixture of LMA change along a productivity gradient. This is essentially representing the results of \citet{Falster-2017} only over LMA (leaving out size at maturity). Low LMA strategies are only possible in productive sites.
+The figure \ref{fig:lma} represents how the evolved community mixture
+of LMA change along a productivity gradient. This is essentially
+representing the results of \citet{Falster-2017} only over LMA
+(leaving out size at maturity). Low LMA strategies, coressponding to
+fast-growing light demanding species are only possible in productive sites.
 
 \begin{figure}[ht]
 \centering
@@ -278,7 +320,7 @@ however coming with a higher respiration cost (potentially also a higher leaf tu
 \end{figure}
 
 The figures \ref{fig:lma_narea1} and \ref{fig:lma_narea2} show that
-the gradient of $LMA$ is less strong than in the previous models but that a gradient of $N_{area}$ is predicted. There is also a negative correlation between $N_{area}$ and $LMA$ within sites.
+the gradient of $LMA$ is weaker than in the previous models but that a gradient of $N_{area}$ is predicted. There is also a negative correlation between $N_{area}$ and $LMA$ within sites.
 
 \begin{figure}[ht]
 \centering
@@ -388,7 +430,13 @@ The kinetic parameters $K_c$, $K_o$, $V_{cmax}$, and $\tau$ change with temperat
 
 \clearpage
 
-We can use the R package plantecophys \citep{Duursma-2015} to compare the current photosynthesis model of \plant\ and the FvC model for different parameters. In most of the cases I assumed as in \citet{Medlyn-2002} that $J_{max} = 1.67 \times V_{cmax}$. Several other equations have been proposed see \citet{Walker-2014,Kattge-2011}. For the simulations with $N_{area}$ we will also need to express $V_{cmax}$ in function of $N_{area}$ \citep{Kattge-2009,Domingues-2010,Sakschewski-2015}. For instance, \citet{Sakschewski-2015} fitted the following relationship on the TRY data $V_{cmax25} = 31.62 N_{area}^0.801$.
+We can use the R package plantecophys \citep{Duursma-2015} to compare
+the current photosynthesis model of \plant\ and the FvC model for
+different parameters. In most of the cases I assumed as in
+\citet{Medlyn-2002} that $J_{max} = 1.67 \times V_{cmax}$. Several
+other equations have been proposed see
+\citet{Walker-2014,Kattge-2011}.
+% For the simulations with $N_{area}$ we will also need to express $V_{cmax}$ in function of $N_{area}$ \citep{Kattge-2009,Domingues-2010,Sakschewski-2015}. For instance, \citet{Sakschewski-2015} fitted the following relationship on the TRY data $V_{cmax25} = 31.62 N_{area}^0.801$.
 
 
 \begin{figure}[ht]
@@ -398,7 +446,8 @@ We can use the R package plantecophys \citep{Duursma-2015} to compare the curren
 \label{fig:photo}}
 \end{figure}
 
-The figure \ref{fig:photo} show the light response curves for \plant\, the default FvC, FvC with the light parameters similar to \plant\, the parameters used in \citet{Sterck-2011}, and the parameters used in Troll \citep{Marechaux-2017}.
+The figure \ref{fig:photo} show the light response curves for \plant\
+, the default FvC, FvC with the light parameters similar to \plant\ , the parameters used in \citet{Sterck-2011}, and the parameters used in Troll \citep{Marechaux-2017}.
 
 Then we can see how this scale up to the annual photosynthesis rate using the integration approach of \plant\ . \plant\ use a Michaelis Menten function to approximate the annual photosynthesis rate see figure \ref{fig:photo_annu_plant}. The Michaelis Menten approximation is not working well for the FvC model, see Figure \ref{fig:photo_annu_fvc}. An exponential function \citep{Chen-2016} ($A = p_1 *(1-e^{-p_2* E/p_1})$) or the non-rectangular hyperbola work better, see figure \ref{fig:photo_annu_fvc}.
 
@@ -451,6 +500,8 @@ This has been modified by \citet{Leuning-1995} as the following empirical equati
 \label{eq:gs-Leuning}
 g_s= g_0 + g_1 \frac{A_n }{(c_a - \Gamma)(1+D/D_0)}.
 \end{equation}
+
+Where $D$ is the air vapor pressure deficit (VPD).
 
 Then several approach have been developed to predict stomatal conductance based on the optimization of the summed cost of water loss and carbon gain \citep{Medlyn-2002,Prentice-2014,Wolf-2016,Sperry-2017}. One of the most used approach is the one developed by \citet{Medlyn-2011} as :
 
@@ -505,13 +556,12 @@ The variation of the Leuning model with vpd seems to give rise to an annual mode
 \label{fig:photo_annu_fvc_vpd3}}
 \end{figure}
 
-
 So my proposition would be to run simulation with this coupled FvC-Leuning model along a gradient of vpd where the $V_{cmax}$ and $J_{max}$ are related to $N_{area}$ using the link proposed by \citep{Sakschewski-2015}.
 
 \subsection{Parametrisation of the FvCB}
 
 
-What could be the default parameters of the FvCB model to use for
+Choice of parameters of the FvCB model to use for
 forest trees? Here is a short list of existing parametrisation for the
 light response part:
 \begin{itemize}
@@ -520,15 +570,21 @@ light response part:
 
 \item In \citet{Medlyn-2002} $\alpha = 0.3$ and $\theta = 0.9$
 
-\item In Plant $\theta = 0.5$ and $\alpha= 0.04$ is not on the same unite (mol of CO2 per mol of photon wherease in FvCB in mol electron per mol photon)  (conversion see Mercado et al 2009 , the conversion of the apparent quantum yield in micromolCO2/micromol quantum into micromol e-/micxromol quantum is done by multipliyng by 4, since four electrons are needed to regenerate RuBP $4*0.04 = 0.16$ but we also probably need to correct for leaf absorbance 0.8 in Medlyn et al. 2002)
+\item In Plant $\theta = 0.5$ and $\alpha= 0.04$ not on the same unite
+  (mol of CO2 per mol of photon wherease in FvCB in mol electron per
+  mol photon)  (conversion see Mercado et al 2009, the conversion of
+  the apparent quantum yield in micromolCO2/micromol quantum into
+  $\mu$ mol e-/micxromol quantum is done by multipliyng by 4, since
+  four electrons are needed to regenerate RuBP $4*0.04 = 0.16$ but we
+  also probably need to correct for leaf absorbance for instance 0.8 in \citet{Medlyn-2002})
 
 \item In \citet{Sterck-2011} $\theta = 0.5$ and $\alpha = 0.25$ (not exactly the same alpha ...)
 
-\item  In Valladares et al. 1997 tropicla shrub $\theta$ between 0.51 and 0.8 and $\alpha$ (in mol CO2) between 0.048 and 0.066
+\item  In \citet{Valladares-1997} for tropical shrubs $\theta$ ranges between 0.51 and 0.8 and $\alpha$ (in mol CO2) between 0.048 and 0.066
 
 \item In TROLL \citet{Marechaux-2017} $\alpha = 0.075*4 = 0.3$ and $\theta = 0.7$ based on von Caemmerer 2000
 
-\item In von Caemmerer 2000 the non rectangular hyperbola light response curve has an initial slope $\alpha_1 \times \Phi_{PSII} \times \beta$ with $\alpha_1$ the leaf absorptance, $\Phi_{PSII}$ the maximum quantum yield of the photosystem II and $\beta$ the fraction of absorbed light that reach PSII.
+\item In \citet{vonCaemmerer-2000} the non rectangular hyperbola light response curve has an initial slope $\alpha_1 \times \Phi_{PSII} \times \beta$ with $\alpha_1$ the leaf absorptance, $\Phi_{PSII}$ the maximum quantum yield of the photosystem II and $\beta$ the fraction of absorbed light that reach PSII.
 
 \end{itemize}
 
@@ -537,10 +593,15 @@ I propose to use the parametrisation of \citet{Marechaux-2017}.
 
 \subsection{Parametrisation of Jmax \textit{vs.} Vcmax}
 
-The hypothesis of a coordination between Calvin-Benson cycle limited rate of assimilation and electron transport limited rate of assimilation, lead to the asumption of a correlation between Vcmax and Jmax. Different model to link them have been proposed.
+The hypothesis of a coordination between Calvin-Benson cycle limited
+rate of assimilation and electron transport limited rate of
+assimilation, lead to the asumption of a correlation between Vcmax and
+Jmax. Different model to link them have been proposed in the
+litterature.
+
 \begin{itemize}
 
-\item according to \citet{Medlyn-2002} $J_{max} = 1.67 \times  V_{cmax}$.
+\item In \citet{Medlyn-2002} $J_{max} = 1.67 \times  V_{cmax}$.
 
 \item In \citet{Walker-2014} the relationship is a power function of $V_{cmax}$ $J_{max} = exp(1.01) \times V_{cmax}^{0.89}$.
 
@@ -571,13 +632,13 @@ Photosynthetic rate should scale positively with leaf Nitrogen (N) because of te
 
 \begin{itemize}
 
-\item \citet{Sakschewski-2015} prposed that $V_{cmax} = 31.62 \times N_{area}^{0.801}$ (unit g per m2 need to be converted in kg per m2 as $*1000^{0.801}$.
+\item \citet{Sakschewski-2015} proposed that $V_{cmax} = 31.62 \times N_{area}^{0.801}$ (unit g per m2 need to be converted in kg per m2 as $*1000^{0.801}$.
 
 \item  \citet{Walker-2014} proposed that $ln(Vcmax) = 3.946 + 0.921 \times log(N) + 0.121 \times log(P) + 0.281 \times log(N) \times log(P)$ and explored other model that include also LMA. To get a function of only N this should be $V_{cmax} = exp(3.712) \times N^{0.650}$ see  \citet{Walker-2017}.
 
-\item In \citet{Kattge-2011} $V_{cmax} = a + b \times N_{area}$ with different value per biomes estimated either with $V_{cmax}$ only or also constrained by $A_{max}$.
+\item \citet{Kattge-2011} proposed $V_{cmax} = a + b \times N_{area}$ with different value per biomes estimated either with $V_{cmax}$ only or also constrained by $A_{max}$.
 
-\item In \citet{Domingues-2010} several model based on N and P.  If we look only at the one based only o N this is: $V_{cmax} = 10^{1.57} \times N_{area}^{0.55}$ (Appendix C Table A2).
+\item \citet{Domingues-2010} proposed several model based on N and P.  If we look only at the one based only on N this is: $V_{cmax} = 10^{1.57} \times N_{area}^{0.55}$ (Appendix C Table A2).
 
 \end{itemize}
 
@@ -590,9 +651,11 @@ The Figure \ref{fig:Narea_Vcmax} show the different parametrization.
 \label{fig:Narea_Vcmax}}
 \end{figure}
 
-Other traits such as leaf P and SLA could also influence Vcmax \citep{Walker-2014,Domingues-2010}. LMA have little effect on the link between Vcmax and Narea.  Leaf P have little direct effect on Vcmax but an important interaction with Narea: at low leaf P the slope of Vcmax \textit{vs} Narea is shallow but at high leaf P this slope is steeper \citep{Walker-2014}.
-It is also possible to use an other apporach where both Vcmax and Jmax are function traits rather than having Jmax a function of Vcmax (Domingues et al. 2010, Walker et al. 2014).
+Other traits such as leaf P and SLA could also influence Vcmax \citep{Walker-2014,Domingues-2010}. LMA has little effect on the link between Vcmax and Narea.  Leaf P has little direct effect on Vcmax but an important interaction with Narea: at low leaf P the slope of Vcmax \textit{vs} Narea is shallow but at high leaf P this slope is steeper \citep{Walker-2014}.
+It is also possible to use an other approach where both Vcmax and Jmax
+are function of N and P rather than having Jmax a function of Vcmax (Domingues et al. 2010, Walker et al. 2014).
 
+I propose to use \citet{Sakschewski-2015}.
 
 
 \subsection{TODO to run simulation with this FvC model in plant}
@@ -604,7 +667,7 @@ In the long-term it would be interesting to think about:
 
 \item predict vpd and a full water budget for the observed data (glopnet) to facilitate comparison with theoretical prediction (building on \citet{Prentice-2014}).
 
-\item using stomatal model that is linked to the soil water potential (as in \citet{Sperry-2016} or 
+\item using stomatal model that is linked to the soil water potential (as in \citet{Sperry-2016} or
 \citet{Sterck-2011})
 
 \item include a simple water budget to model tree competition for water
