--- a/ms/references.bib
+++ b/ms/references.bib
@@ -1057,6 +1057,16 @@
   pages = {2234--41},
 }
 
+@article{Valladares-1997,
+  title = {Photosynthetic Responses to Dynamic Light under Field Conditions in Six Tropical Rainforest Shrubs Occuring along a Light Gradient},
+  volume = {111},
+  number = {4},
+  journal = {Oecologia},
+  author = {Valladares, Fernando and Allen, Mitchell T. and Pearcy, Robert W.},
+  year = {1997},
+  pages = {505--514}
+}
+
 @Article{VanBodegom-2014,
   title = {A fully traits-based approach to modeling global vegetation distribution},
   doi = {10.1073/pnas.1304551110},
@@ -1076,6 +1086,12 @@
   pages = {224--235},
 }
 
+@book{vonCaemmerer-2000,
+  title={Biochemical models of leaf photosynthesis},
+  author={Von Caemmerer, Susanna},
+  year={2000},
+  publisher={Csiro publishing}
+}
 
 @article{Walker-2014,
   title = {The Relationship of Leaf Photosynthetic Traits - {{Vcmax}} and {{Jmax}} - to Leaf Nitrogen, Leaf Phosphorus, and Specific Leaf Area: A Meta-Analysis and Modeling Study},
