update slope and elev param for LMA LLS tradeoff

--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -138,8 +138,7 @@ affect the dynamics and competition for light.
 \begin{itemize}
 
 \item First focusing only on $LMA$, the aridity gradient can simply affect
-the productivity with consequence on the process of light
-competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}.
+the productivity with consequence on the process of light competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}.
 
 \item Secondly, the environmental gradient can affect the
 trade-off underpinning the light use strategy (by changing the
@@ -153,11 +152,9 @@ investment in leaf nitrogen per area $N_{area}$ at higher aridity
 \citep{Wright-2002b} that would results in a decrease leaf life span. Some studies have also reported potential
 effect on the slope of the relationship. We will thus explore how the
 change in the trade-off between $LMA$ and $LLS$ can influence shift in
-trait assembly predicted by \plant\.
+trait assembly predicted by \plant\ .
 
-\item Finally, we could explore the role of $N_{area}$, which can have
-  direct influence on the species tolerance to aridity as proposed by
-  \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the
+\item Finally, we could explore the role of $N_{area}$, which can have direct influence on the species tolerance to aridity as proposed by \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the
   abundance of photosynthetic apparatus in the leaf and allow the
   plant to achieve higher photosynthesis for a given stomatal
   conductance. Higher $N_{area}$ come however with the cost of a high
@@ -238,7 +235,7 @@ This can be seen In Glopnet as (i) the elevation of the LTR \textit{vs.} LMA is 
 
 \begin{figure}[ht]
 \centering
-\includegraphics{../figures/data_lma_ll_trade_off_climate_lev_P.pdf}
+\includegraphics{../figures/data_lma_ll_trade_off_climate_elev_P.pdf}
 \caption{\textbf{LTR vs LMA tradeoff per classes of MAP}
 \label{fig:MAP}}
 \end{figure}
@@ -246,7 +243,7 @@ This can be seen In Glopnet as (i) the elevation of the LTR \textit{vs.} LMA is 
 
 \begin{figure}[ht]
 \centering
-\includegraphics{../figures/data_lma_ll_trade_off_climate_lev_T_P.pdf}
+\includegraphics{../figures/data_lma_ll_trade_off_climate_elev_T_P.pdf}
 \caption{\textbf{LTR vs LMA tradeoff per classes of MAT/MAP}
 \label{fig:MAT_MAP}}
 \end{figure}
@@ -658,8 +655,22 @@ are function of N and P rather than having Jmax a function of Vcmax (Domingues e
 I propose to use \citet{Sakschewski-2015}.
 
 
-\subsection{TODO to run simulation with this FvC model in plant}
+\subsection{TODO SHORT-TERM}
 
+In the long-term it would be interesting to think about:
+
+\begin{itemize}
+
+\item Choose P or P/T effect on elevation and slope
+
+\item re-run all simulation on cluster
+
+\item run simulation with this FvC model in plant without boundary to try to solve pb
+
+\end{itemize}
+
+
+\subsection{TODO LONG-TERM}
 
 In the long-term it would be interesting to think about:
 
